--- a/package.json
+++ b/package.json
@@ -5,17 +5,23 @@
   "dependencies": {
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
+    "classnames": "^2.2.5",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "massive": "^4.5.0",
+    "oauth-provider": "^1.0.7",
+    "passport": "^0.4.0",
+    "passport-auth0": "^0.6.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
-    "redux-promise-middleware": "^5.0.0"
+    "redux-promise-middleware": "^5.0.0",
+    "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
