--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "main": "./server/server.js",
-  "proxy": "http://localhost:3212",
+  "proxy": "http://localhost:3212/",
   "dependencies": {
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
